# Travel_Planning_Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  planner_tracker.md  pyproject.toml  replanner_tracker.md
.claude/rules/: agent-web-server.md  pydantic.md  uv.md
.claude/skills/bootstrap/: SKILL.md
.claude/skills/openai-agents-sdk-guardrails/: SKILL.md
.claude/skills/openai-agents-sdk-multi-agent/: SKILL.md
.claude/skills/openai-agents-sdk-sessions/: SKILL.md
.claude/skills/openai-agents-sdk-state/: SKILL.md
.claude/skills/openai-agents-sdk-tools/: SKILL.md
.playwright-mcp/: page-2026-04-27T22-06-47-116Z.yml
assets/docs/: pipeline.md
backend/agents/: activity.py  conversation.py  dining.py  disruption_parser.py  intake.py  lodging.py  orchestrator.py  replanner.py  solver.py  transport.py
backend/agents/prompts/: activity.md  conversation.md  (+6 more)
backend/data/: places_rome.json
backend/guardrails/: input_validation.py
backend/models/: context.py  disruption.py  itinerary.py  places.py  request.py
backend/tests/: test_api.py  test_budget.py  test_models.py  test_parsing.py  test_transport.py  test_weather.py
backend/tools/: cache.py  context_tools.py  geocoding.py  hotel_pricing.py  maps_links.py  places.py  pool.py  replan_tools.py  routing.py  tavily_search.py  transport.py  weather.py
docs/: capstone_wrap_up.md  pipeline.html  pipeline_demo.html  plan.md  planner_tracker.md  replanner_tracker.md  todo_next_session.md
scripts/: deploy.sh  seed_places_cache.py
static/: index.html  pitch.html
(+6 files in other folders)
